--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,7 +7,7 @@
           <span class="icon-bar b2"></span>
           <span class="icon-bar b3"></span>
         </button>
-        <%= link_to image_tag("nrel-logo.jpg", alt: "NREL"), root_path, class: "navbar-brand" %>
+        <%= link_to image_tag("nrel-logo.jpg", alt: "NREL"), root_path %>
       </div>
 
       <div class="navbar-collapse collapse">
