--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,15 @@
 <head>
   <title>NrelMarketMapper</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <%= render partial: "layouts/nav" %>
 
-<%= yield %>
+  <%= yield %>
 
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0/Chart.js'></script>
+  <%= javascript_include_tag 'application' %>
 </body>
 </html>
