Add dynamic dropdown for states graphs
Add a select dropdown that allows you to choose the state and dynamically
update the graphs based on the states data

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,8 +12,8 @@
 
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "USA", "#" %></li>
-          <li><%= link_to "State", "#" %></li>
+          <li><%= link_to "USA", root_path %></li>
+          <li><%= link_to "States", states_path %></li>
         </ul>
       </div>
     </div>
