Add totals to top of pages
* Totals include # of installs, capacity and average cost
* Add capybara-webkit gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render partial: "layouts/nav" %>
-
+  <%= render partial: "shared/callout_boxes" %>
   <%= yield %>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0/Chart.js'></script>
