--- a/app/views/shared/_callout_boxes.html.erb
+++ b/app/views/shared/_callout_boxes.html.erb
@@ -1,14 +1,16 @@
-<section class="installs">
-  <h3># of Installs</h3>
-  <h4></h4>
-</section>
+<div class="row">
+  <section class="installs col-xs-4">
+    <h3># of Installs</h3>
+    <h4>n/a</h4>
+  </section>
 
-<section class="capacity">
-  <h3>Total Capacity</h3>
-  <h4></h4>
-</section>
+  <section class="capacity col-xs-4">
+    <h3>Total Capacity</h3>
+    <h4>n/a</h4>
+  </section>
 
-<section class="cost">
-  <h3>Avg Cost/yr</h3>
-  <h4></h4>
-</section>
+  <section class="cost col-xs-4">
+    <h3>Avg Cost/yr</h3>
+    <h4>n/a</h4>
+  </section>
+</div>
