--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+  <%= render partial: "shared/callout_boxes" %>
+</div>
 <section class="us">
   <%= render partial: "shared/graphs" %>
 </section>
