Fix cache blocks
Forgot to put the do at the end of the opening cache blocks

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<% cache("site_nav", :expires_in => 1.day) %>
+<% cache("site_nav", :expires_in => 1.day) do %>
   <header>
     <div class="navbar navbar-default navbar-fat navbar-clean">
       <div class="container">
