--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,4 +1,4 @@
-<% cache("us_charts", :expires_in => 1.day) %>
+<% cache("us_charts", :expires_in => 1.day) do %>
   <div class="container">
     <%= render partial: "shared/callout_boxes" %>
   </div>
