--- a/app/views/shared/_callout_boxes.html.erb
+++ b/app/views/shared/_callout_boxes.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <section class="installs col-xs-4">
     <h3># of Installs</h3>
-    <h4>n/a</h4>
+    <h4 id="total_installs">n/a</h4>
   </section>
 
   <section class="capacity col-xs-4">
