Edit chart formatting
* Rearrange charts to match order of callout boxes
* Edit chart labels
* Add blank line to state dropdown selector
* Add comma to total number of installs in callout box

--- a/app/views/shared/_callout_boxes.html.erb
+++ b/app/views/shared/_callout_boxes.html.erb
@@ -10,7 +10,7 @@
   </section>
 
   <section class="cost col-xs-4">
-    <h3>Avg Cost/yr</h3>
+    <h3>Avg Cost</h3>
     <h4>n/a</h4>
   </section>
 </div>
