--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -2,6 +2,9 @@
   <div class="container">
     <%= render partial: "shared/callout_boxes" %>
   </div>
+  <div class="container map">
+    <%= render partial: "shared/map" %>
+  </div>
   <section class="us">
     <%= render partial: "shared/graphs" %>
   </section>
