--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -63,3 +63,38 @@
   padding-right: 14px;
   padding-left: 6px;
 }
+
+/*** Maps ***/
+.info {
+  padding: 6px 8px;
+  font-size: 1.1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+
+.info h4 {
+  font-size: 1.4rem;
+  margin: 0 0 5px;
+  color: #777;
+}
+
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
+.map {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
