Add geojson for Colorado
* Geojson added to Colorado with number of installs per county
* Map functionality added to state_loader.js

--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -4,6 +4,9 @@
       <%= select_tag "states", options_from_collection_for_select(@states, "abbr", "name"), class: "form-control", include_blank: "Select a State" %>
       <%= render partial: "shared/callout_boxes" %>
     </div>
+    <div class="container map">
+      <%= render partial: "shared/map" %>
+    </div>
     <%= render partial: "shared/graphs" %>
   </section>
 <% end %>
