--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,5 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "leaflet.css.scss";
+ @import "leaflet.scss";
  @import "main.scss";
