--- a/app/views/shared/_callout_boxes.html.erb
+++ b/app/views/shared/_callout_boxes.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
-  <section class="installs col-xs-4">
+  <section class="installs col-xs-4 col-md-12 col-sm-12 col-lg-12">
     <h3># of Installs</h3>
     <h4>n/a</h4>
   </section>
 
-  <section class="capacity col-xs-4">
+  <section class="capacity col-xs-4 col-md-12 col-sm-12 col-lg-12">
     <h3>Total Capacity</h3>
     <h4>n/a</h4>
   </section>
 
-  <section class="cost col-xs-4">
+  <section class="cost col-xs-4 col-md-12 col-sm-12 col-lg-12">
     <h3>Avg Cost</h3>
     <h4>n/a</h4>
   </section>
