--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,11 +1,13 @@
 <% cache("us_charts", :expires_in => 1.day) do %>
-  <div class="container">
-    <%= render partial: "shared/callout_boxes" %>
+  <div class="container box-map clearfix">
+    <div class="callout-boxes">
+      <%= render partial: "shared/callout_boxes" %>
+    </div>
+    <div class="map">
+      <%= render partial: "shared/map" %>
+    </div>
   </div>
-  <div class="container map">
-    <%= render partial: "shared/map" %>
-  </div>
-  <section class="us">
+  <section class="us container">
     <%= render partial: "shared/graphs" %>
   </section>
 <% end %>
