Move over US page to react
* Converted the index page to a Usa componentn
* Create Map, CalloutBox, Graph components
* Got rid of JS files no longer in use

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,13 +1,3 @@
 <% cache("us_charts", :expires_in => 1.day) do %>
-  <div class="container box-map clearfix">
-    <div class="callout-boxes">
-      <%= render partial: "shared/callout_boxes" %>
-    </div>
-    <div class="map">
-      <%= render partial: "shared/map" %>
-    </div>
-  </div>
-  <section class="us container">
-    <%= render partial: "shared/graphs" %>
-  </section>
+  <%= react_component('Usa') %>
 <% end %>
