--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -1,4 +1,4 @@
-<% cache("states_charts", :expires_in => 1.day) do %>
+<!-- <% cache("states_charts", :expires_in => 1.day) do %>
   <div class="container box-map clearfix states">
     <%= select_tag "states", options_from_collection_for_select(@states, "abbr", "name"), class: "form-control", include_blank: "Select a State" %>
     <div class="callout-boxes">
@@ -11,4 +11,4 @@
       <%= render partial: "shared/graphs" %>
     </section>
   </div>
-<% end %>
+<% end %> -->
